--- a/.github/workflows/Build_X86_64-Lede_2305.yml
+++ b/.github/workflows/Build_X86_64-Lede_2305.yml
@@ -40,6 +40,11 @@ on:
         required: true
         default: false
         type: boolean
+      commit:
+        description: 'commit Update connection to Actions'
+        required: true
+        default: false
+        type: boolean
   schedule:
     - cron: 50 18 * * *
 
@@ -120,14 +125,14 @@ jobs:
         uses: actions/checkout@main
 
       - name: Clone Source Code
-        if: ${{ needs.Checka.outputs.output != 'hello' }}
+        if: ${{ needs.Checka.outputs.output != 'hello' || github.event.inputs.commit == 'true'}}
         working-directory: /workdir
         run: |
           git clone $REPO_URL -b $REPO_BRANCH openwrt
           ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
       - name: Load Custom Feeds
-        if: ${{ needs.Checka.outputs.output != 'hello' }}
+        if: ${{ needs.Checka.outputs.output != 'hello' || github.event.inputs.commit == 'true'}}
         run: |
           [ -e $FEEDS_CONF ] && cp -r $FEEDS_CONF openwrt/feeds.conf.default
           chmod +x $DIY_P1_SH
@@ -135,15 +140,15 @@ jobs:
           $GITHUB_WORKSPACE/$DIY_P1_SH
 
       - name: Update Feeds
-        if: ${{ needs.Checka.outputs.output != 'hello' }}
+        if: ${{ needs.Checka.outputs.output != 'hello' || github.event.inputs.commit == 'true'}}
         run: cd openwrt && ./scripts/feeds update -a
 
       - name: Install Feeds
-        if: ${{ needs.Checka.outputs.output != 'hello' }}
+        if: ${{ needs.Checka.outputs.output != 'hello' || github.event.inputs.commit == 'true'}}
         run: cd openwrt && ./scripts/feeds install -a
 
       - name: Make Defconfig Custom Configuration
-        if: ${{ needs.Checka.outputs.output != 'hello' }}
+        if: ${{ needs.Checka.outputs.output != 'hello' || github.event.inputs.commit == 'true'}}
         run: |
           chmod +x $DIY_P2_SH
           cd openwrt
@@ -166,7 +171,7 @@ jobs:
           echo "COMMIT_TIME=auto update config: $(date +'%Y-%m-%d %H:%M')" >> $GITHUB_ENV
 
       - name: Git Auto Update Config
-        if: ${{ needs.Checka.outputs.output != 'hello' }}
+        if: ${{ needs.Checka.outputs.output != 'hello' || github.event.inputs.commit == 'true'}}
         uses: stefanzweifel/git-auto-commit-action@master
         id: commit
         env:
