--- a/.github/workflows/Build_X86_64-Lede_2305.yml
+++ b/.github/workflows/Build_X86_64-Lede_2305.yml
@@ -1440,7 +1440,7 @@ jobs:
 # //////////////////////////////////////////////////////////////////////////////////////////////
   Cleaning:
     if: ${{ always() }}
-    needs: [Checka,Build_x86_64_54,Build_x86_64_515,Build_x86_64_61,Build_x86_64_66,Build_x86_64_612]
+    needs: [Checka,Build_x86_64_515,Build_x86_64_61,Build_x86_64_66,Build_x86_64_612]
     runs-on: ubuntu-latest
     steps:
     - name: Delete workflow runs
