--- a/.github/workflows/Build_X86_64-OpenWrt.yml
+++ b/.github/workflows/Build_X86_64-OpenWrt.yml
@@ -573,9 +573,10 @@ jobs:
         
     - name: Load custom feeds
       run: |
-        #[ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
+        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         chmod +x $DIY_P1_SH
         cd openwrt
+        sed -i '/^src-git /s|\.git$|.git;openwrt-24.10|' feeds.conf.default
         $GITHUB_WORKSPACE/$DIY_P1_SH
         
     - name: Update feeds
@@ -884,9 +885,10 @@ jobs:
         
     - name: Load custom feeds
       run: |
-        #[ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
+        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         chmod +x $DIY_P1_SH
         cd openwrt
+        sed -i '/^src-git /s|\.git$|.git;openwrt-23.05|' feeds.conf.default
         $GITHUB_WORKSPACE/$DIY_P1_SH
         
     - name: Update feeds
