--- a/config/lede_config/x86-2305.config
+++ b/config/lede_config/x86-2305.config
@@ -5365,8 +5365,8 @@ CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_iptables-mod-tproxy=y
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_ipset=y
-CONFIG_PACKAGE_luci-app-openlist=y
-# CONFIG_PACKAGE_luci-app-openlist2 is not set
+# CONFIG_PACKAGE_luci-app-openlist is not set
+CONFIG_PACKAGE_luci-app-openlist2=y
 # CONFIG_PACKAGE_luci-app-openvpn is not set
 CONFIG_PACKAGE_luci-app-openvpn-server=y
 # CONFIG_PACKAGE_luci-app-openwisp is not set
@@ -7143,7 +7143,7 @@ CONFIG_PACKAGE_naiveproxy=y
 # CONFIG_PACKAGE_ngrokc is not set
 CONFIG_PACKAGE_npc=y
 # CONFIG_PACKAGE_nps is not set
-# CONFIG_PACKAGE_openlist2 is not set
+CONFIG_PACKAGE_openlist2=y
 # CONFIG_PACKAGE_phtunnel is not set
 # CONFIG_PACKAGE_polipo is not set
 # CONFIG_PACKAGE_privoxy is not set
@@ -7456,7 +7456,7 @@ CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 # CONFIG_PACKAGE_ooniprobe is not set
 # CONFIG_PACKAGE_oor is not set
 # CONFIG_PACKAGE_open-iscsi is not set
-CONFIG_PACKAGE_openlist=y
+# CONFIG_PACKAGE_openlist is not set
 # CONFIG_PACKAGE_oscam is not set
 # CONFIG_PACKAGE_oping is not set
 # CONFIG_PACKAGE_ostiary is not set
