--- a/config/lede_config/x86-docker.config
+++ b/config/lede_config/x86-docker.config
@@ -5325,6 +5325,7 @@ CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_iptables-mod-tproxy=y
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_ipset=y
+CONFIG_PACKAGE_luci-app-openlist=y
 # CONFIG_PACKAGE_luci-app-openvpn is not set
 CONFIG_PACKAGE_luci-app-openvpn-server=y
 CONFIG_PACKAGE_luci-app-p910nd=y
