--- a/config/immo_config/x86.config
+++ b/config/immo_config/x86.config
@@ -6507,8 +6507,8 @@ CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_iptables-mod-tproxy=y
 # CONFIG_PACKAGE_iptables-mod-extra is not set
 CONFIG_PACKAGE_ipset=y
-CONFIG_PACKAGE_luci-app-openlist=y
-# CONFIG_PACKAGE_luci-app-openlist2 is not set
+# CONFIG_PACKAGE_luci-app-openlist is not set
+CONFIG_PACKAGE_luci-app-openlist2=y
 # CONFIG_PACKAGE_luci-app-openthread is not set
 # CONFIG_PACKAGE_luci-app-openvpn is not set
 CONFIG_PACKAGE_luci-app-openvpn-server=y
@@ -8349,7 +8349,7 @@ CONFIG_PACKAGE_naiveproxy=y
 # CONFIG_PACKAGE_ngrokc is not set
 CONFIG_PACKAGE_npc=y
 # CONFIG_PACKAGE_nps is not set
-# CONFIG_PACKAGE_openlist2 is not set
+CONFIG_PACKAGE_openlist2=y
 # CONFIG_PACKAGE_privoxy is not set
 # CONFIG_PACKAGE_radicale is not set
 # CONFIG_PACKAGE_radicale2 is not set
@@ -8687,7 +8687,7 @@ CONFIG_PACKAGE_omcproxy=y
 # CONFIG_PACKAGE_oor is not set
 # CONFIG_PACKAGE_open-iscsi is not set
 # CONFIG_PACKAGE_openelp is not set
-CONFIG_PACKAGE_openlist=y
+# CONFIG_PACKAGE_openlist is not set
 # CONFIG_PACKAGE_openthread-br is not set
 # CONFIG_PACKAGE_oscam is not set
 # CONFIG_PACKAGE_oping is not set
